# sdvx-controller-firmware

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flash.sh  openocd.gdb
.cargo/: config.toml
src/: keycode.rs  main.rs  sdvx_bcm.rs  sdvx_controller.rs  sdvx_cos_table.rs  sdvx_keycode.rs  sdvx_sin_table.rs  sdvx_status.rs  sdvx_sys_clock.rs
src/sdvx_animation/: mod.rs  sdvx_fade_animation.rs
