[package]
name = "sdvx-controller-firmware"
version = "0.1.0"
authors = ["Linas NikiperaviÄius <linas@linasdev.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"
usb-device = "0.2.8"
usbd-hid = "0.5.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]
