[package]
name = "sdvx-controller-firmware"
version = "1.1.1"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Firmware for an open-source Sound Voltex controller"
repository = "https://github.com/linasdev/sdvx-controller-firmware"
readme = "README.md"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
panic-reset = "0.1.0"
embedded-hal = "0.2.5"
usb-device = "0.2.8"
usbd-hid = "0.5.0"
rotary-encoder-hal = "0.3.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]
